Return correct PdmDevicePixelRatioScaled metric

QSvgGenerator::metric returned incorrect value for
`PdmDevicePixelRatioScaled` resulting in degenerate
`devicePixelRatioF()` return value.

[ChangeLog][][QSvgGenerator] Report correct  devicePixelRatioF

Task-number: QTBUG-63159
Change-Id: Ib45e930b6b1b6d85aea5a68dd2b1b5f16a4eed3b
Reviewed-by: Eirik Aavitsland <eirik.aavitsland@qt.io>